test/core/errors/default_values_error/zs/wrong_float_initializer_error.zs
package wrong_float_initializer_error;

struct WrongFloatInitializer
{
    float64 wrongFloatInitializer = "wrong";
};
